# trivz_backend

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  database.py  main.ipynb  main.py  models.py
src/routers/: auth.py  room.py  session.py  ws.py
src/schemas/: session.py  user.py
src/services/: auth.py  db.py  trivia.py
trivz_backend/: .gitignore  pyproject.toml
trivz_backend/src/: config.py  database.py  dependancies.py  main.py  models.py
trivz_backend/src/models/: __init__.py  room.py  session.py  user.py
trivz_backend/src/routers/: auth.py  room.py  session.py
trivz_backend/src/schemas/: auth.py  room.py  session.py  user.py
trivz_backend/src/services/: auth.py  room.py  ws.py
trivz_backend/src/ws/: __init__.py  manager.py
trivz_frontend/: go.mod  main.go
